Gt 1160 open discovery services (#318)
* GT-1160 changes needed for dynamically determining auth properties

* GT-1160 added support for testing URLs